Examples/test-suite/errors/swig_typemap_typecheck.i
%module xxx

%typemap(in) Integer x {
  $1 = 0;
}

void overloaded(const char *c);
void overloaded(Integer x, double d);
